--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
     "@fontsource/twinkle-star": "^4.5.9",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "add": "^2.0.6",
     "astro": "^2.2.1",
     "autoprefixer": "^10.4.14",
